--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,4 +1,5 @@
 .sidebar{
+    background-color: whitesmoke;
     display: flex;
     flex-direction: column;   
     justify-content: space-between;
