--- a/src/pages/Estoque/Estoque.module.css
+++ b/src/pages/Estoque/Estoque.module.css
@@ -2,8 +2,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    padding-left: 5rem;
+}
 
+.cabecalho{
+    display: flex;
+    align-items: center;
+}
+
+.filtro{
+    align-self: center;
+    height : 40px ;
+    width : 40px ;
+    transition : all .3s ease ;
+    border-radius: 100%;
+    border-style: groove;
+    border-color: #242424;
+    border-width: 0.1px;
+}
+.filtro:hover{
+    background-color: #d2d2d2b4;
 }
 
 .pesquisa{
@@ -27,6 +45,6 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(3,1fr);
-    gap: 1rem;
+    gap: 2rem;
     justify-self: center;
 }
