--- a/src/pages/Equipe/Equipe.module.css
+++ b/src/pages/Equipe/Equipe.module.css
@@ -56,7 +56,7 @@
     background-color: rgb(64, 0, 94);
     align-items: center;
 }
-.td{
+td{
     width: 150px;
     border-collapse: collapse;
 }
@@ -65,6 +65,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
 .actions_btn {
