--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@ body{
 
 .app{
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
 }
 
-.red{
-  background-color: rgb(239, 239, 239);
-  border-radius: 6%;
-}
