--- a/src/components/Modals/CadastrarFuncionario.module.css
+++ b/src/components/Modals/CadastrarFuncionario.module.css
@@ -11,11 +11,11 @@
     z-index: 100; /* Garante que o modal apareça acima do conteúdo restante */   
 }
 
-
 .modal_container {
     animation: fade 0.5s;
     background-color: rgb(28, 0, 92);
     border-radius: 15px;
+    padding: 0px 30px 20px 30px;
 }
 
 .modal_container * {
@@ -28,6 +28,34 @@
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
 }
+
+/* FORMS */
+
+.form{
+    width: 600px;
+}
+
+.select_form {
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.input_form {
+    background-color: rgb(28, 0, 92);
+    width: 100%;
+    border: 1px solid white;
+    border-radius: 4px;
+    /* border: 5px solid yellow; */
+}
+
+.required {
+    color: red;
+}
+
+
+
+
+/* BOTÕES */
 
 .btn_cadastrar {
     padding: 5px 5px 5px 5px;
@@ -73,14 +101,4 @@
         opacity: 1;
         transform: translateY(0px) scale(1);
     }
-}
-
-.input_form {
-    width: 90%;
-    border: 1px solid white;
-    border-radius: 4px;
-}
-
-.required {
-    color: red;
 }
