adiciona tela de venda

--- a/src/components/ProdutoMiniatura/ProdutoMiniatura.module.css
+++ b/src/components/ProdutoMiniatura/ProdutoMiniatura.module.css
@@ -24,4 +24,9 @@
     display: flex;
     justify-content: space-between;
 }
-
+.butoes{
+    margin-top: 7px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
