adiciona gestao de vendas

--- a/src/components/Modals/ModalVendas.module.css
+++ b/src/components/Modals/ModalVendas.module.css
@@ -36,5 +36,11 @@
 }
 .itens{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    overflow-y: scroll;
+    max-height: 500px;
+}
+
+.item{
+    text-align: center;
 }
