--- a/src/pages/Equipe/Equipe.module.css
+++ b/src/pages/Equipe/Equipe.module.css
@@ -56,7 +56,9 @@ table{
 }
 
 .tableRowHeader th{
-    background-color: rgb(64, 0, 94);
+    /* background-color: rgb(64, 0, 94); */
+    background-color: rgb(0, 155, 160);
+    color: white;
     align-items: center;
     width: 200px;
     padding: 5px 5px 5px 5px;
@@ -79,7 +81,8 @@ td{
 }
 
 .tableRow:hover{
-    background-color: #4b4a4a;
+    /* background-color: #4b4a4a; */
+    background-color:aliceblue;
 }
 
 .actions_div{
@@ -94,6 +97,7 @@ td{
     margin-left: 3px;
     border: 0cm;
     padding: 3px;
+    background-color: transparent;
 }
 
 .actions_btn:hover{
@@ -102,6 +106,7 @@ td{
 
 .create_btn {
     background-color:green;
+    color: white;
     text-align: center;
     padding: 5px 5px 5px 5px;
     border: 0cm solid white;
